﻿Version [Version Number] ([Friendly Version Number]) [Release Date]

Version vNext
	General description:

	Project Changes:
		-The solution and projects are converted to Visual Studio 2010. The library is still compatible with
		 .NET 3.5 though.
		-New SimpleInjector.Extensions.Silverlight project was added (and supporting unit test project).
	
	Code Changes:
		-[Core] The Container now registers itself upon creation. This makes some integration scenario's 
		 easier.
		-[Core] A InjectProperties(object) method has been added to the Container. This method enables 
		 injecting public properties to a given type. By adding it to the core library the method can be 
		 optimized for performance and used in integration scenario's without the need for adding the 
		 Extensions.dll.
		-[Core] The 'Handled' property of the UnregisteredTypeEventArgs is made public. This enables some 
		 rare but interesting scenario's were users want to prevent an ActivationException from being thrown 
		 when multiple delegates respond to the same ResolveUnregisteredType event. Publication of the 
		 property allows users skip and continue when another delegate already registered that type.
		-[Extensions] Performance optimization in the RegisterOpenGeneric extension method. Types can now 
		 be resolved as quickly as types that are registered using a Func<T> delegate.
	
	Bug Fixes:
		-[Extensions] NonGenericRegistrationsExtensions.RegisterAll(Container, Type, params Type[]) method was
		 removed, because it was never picked by C# compiler when doing overload resolution.
		-[Core] FuncSingletonInstanceProducer<T> did not reset the CyclicDependencyValidator in case of an
		 exception, which causes the CyclicDependencyValidator to go of when that failing producer was called
		 multiple times, hiding the real cause of failure.
		-[Core] The TransientInstanceProducer<T> and FuncSingletonInstanceProducer<T> incorrectly called 